Add deployment for mailgun

--- a/circle.yml
+++ b/circle.yml
@@ -3,3 +3,7 @@ deployment:
     branch: master
     heroku:
       appname: g-sendgrid
+  mailgun:
+    branch: mailgun
+    heroku:
+      appname: g-mailgun
